change enums to miniscule
